# TileMaxxing

./: .gitignore  CMakeLists.txt  README.md  data_capture  test_mcts
Training/: dataset.py  export_onnx.py  model.py  training.py
data/: run_1779898170.jsonl
model/: tile_value_net.onnx  tile_value_net.onnx.data
model/checkpoints/: best.pt
src/: board.cpp  board.h  data_capture.cpp  data_capture.h  data_capture_main.cpp  heuristic.cpp  heuristic.h  main.cpp  mcts.cpp  mcts.h  network.cpp  network.h
tests/: test_board.cpp  test_mcts.cpp
